--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <div id="logged-in-view" style="display: none;">
             <p>Welcome back!</p>
             <pre id="user-profile"></pre>
+            <pre id="user-scopes"></pre>
             <button id="logout-button">Log Out</button>
         </div>
     </div>
