--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
         <div id="logged-in-view" style="display: none;">
             <p>Welcome back!</p>
             <pre id="user-profile"></pre>
+            
+            <h3>Tokens</h3>
+            <pre id="token-display"></pre>
+
             <button id="logout-button">Log Out</button>
         </div>
     </div>
