--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <p>Welcome back!</p>
             <pre id="user-profile"></pre>
             
-            <h3>Tokens</h3>
+            <p>Tokens</p>
             <pre id="token-display"></pre>
 
             <button id="logout-button">Log Out</button>
